<resources>
	<string name="app_name">Tasty Cocktails</string>
	<string name="title_warning">Warning</string>
	<string name="nav_favorites">Favorites</string>
	<string name="nav_cocktails">Cocktails</string>
	<string name="nav_random">Random</string>
	<string name="nav_history">History</string>
	<string name="nav_about">About</string>
	<string name="dialog_filters">Filters</string>
	<string name="drawer_open">Main menu opened</string>
	<string name="drawer_closed">Main menu closed</string>
	<string name="btn_ok">OK</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_logout">Logout</string>
	<string name="btn_search">Search</string>
	<string name="btn_random">Random</string>
	<string name="btn_close">Close</string>
	<string name="btn_get_started">Get started</string>
	<string name="msg_error_on_login">Error on login</string>
	<string name="msg_error_on_query">Error on loading</string>
	<string name="msg_error_no_internet">No connection to network</string>
	<string name="did_not_find_anything">Did not find anything</string>
	<string name="retry">RETRY</string>
	<string name="ingredients">Ingredients:</string>
	<string name="query_error">Query error happen here</string>
	<string name="network_error">Network error happen here</string>
	<string name="welcome">Welcome to the Tasty Cocktails!</string>
	<string name="tap_search">Tap search to find one</string>
	<string name="removed_from_favorites">%s removed from favorites</string>
	<string name="removed_from_history">%s removed from favorites</string>
	<string name="added_to_favorites">%s added to favorites</string>
	<string name="undo">UNDO</string>
	<string name="add_to_favorites">Favorites</string>
	<string name="no_favorite_drinks">No favorite drinks</string>
	<string name="click_search_to_find_some_drink">Click search to find some drinks</string>
	<string name="history_is_empty">History is empty</string>
	<string name="clear_history">Clear history</string>
	<string name="do_you_really_want_clear_history">Do you really want to clear the history?</string>
	<string name="history_already_empty">History has already empty</string>
	<string name="glass">Glass</string>
	<string name="alcoholic">Alcoholic</string>
	<string name="category">Category</string>
	<string name="ingredient">Ingredient</string>
	<string name="remove_from_history">Remove %s from history?</string>
	<string name="search">Search: %s</string>
	<string name="about_body"><![CDATA[
    	<b>Tasty Cocktails 2017</b><br>
		Version %s
	]]></string>
	<string name="licences_description">This application makes use of the following third party libraries.</string>
	<string name="open_source_licences">Open source licences</string>
	<string name="content_description_user_face">User face</string>
	<string name="content_description_cocktail_image">Cocktail image</string>
	<string name="content_description_ingredient_image">Ingredient image</string>
	<string name="transition_user_face">transition_user_face</string>
	<string name="transition_user_name">transition_user_name</string>
	<string name="list_item_image_transition">list_item_image_transition</string>
	<string name="list_item_label_transition">list_item_label_transition</string>
	<string name="list_item_content_transition">list_item_content_transition</string>
	<string-array name="filter_glass">
		<item>Not selected</item>
		<item>Highball glass</item>
		<item>Cocktail glass</item>
		<item>Old-fashioned glass</item>
		<item>Collins glass</item>
		<item>Pousse cafe glass</item>
		<item>Champagne flute</item>
		<item>Whiskey sour glass</item>
		<item>Brandy snifter</item>
		<item>White wine glass</item>
		<item>Hurricane glass</item>
		<item>Coffee mug</item>
		<item>Shot glass</item>
		<item>Jar</item>
		<item>Irish coffee cup</item>
		<item>Punch bowl</item>
		<item>Pitcher</item>
		<item>Pint glass</item>
		<item>Copper Mug</item>
		<item>Wine Glass</item>
		<item>Cordial glass</item>
		<item>Beer mug</item>
		<item>Margarita/Coupette glass</item>
		<item>Beer pilsner</item>
		<item>Beer Glass</item>
		<item>Parfait glass</item>
		<item>Mason jar</item>
		<item>Margarita glass</item>
		<item>Martini Glass</item>
		<item>Balloon Glass</item>
	</string-array>
	<string-array name="filter_alcoholic">
		<item>Not selected</item>
		<item>Alcoholic</item>
		<item>Non alcoholic</item>
		<item>Optional alcohol</item>
	</string-array>
	<string-array name="filter_categories">
		<item>Not selected</item>
		<item>Cocktail</item>
		<item>Ordinary Drink</item>
		<item>Shot</item>
		<item>Punch / Party Drink</item>
		<item>Coffee / Tea</item>
		<item>Milk / Float / Shake</item>
		<item>Cocoa</item>
		<item>Homemade Liqueur</item>
		<item>Other/Unknown</item>
		<item>Beer</item>
		<item>Soft Drink / Soda</item>
	</string-array>
	<string-array name="filter_ingredients">
		<item>Not selected</item>
		<item>Light rum</item>
		<item>Applejack</item>
		<item>Gin</item>
		<item>Dark rum</item>
		<item>Sweet Vermouth</item>
		<item>Strawberry schnapps</item>
		<item>Scotch</item>
		<item>Apricot brandy</item>
		<item>Triple sec</item>
		<item>Southern Comfort</item>
		<item>Orange bitters</item>
		<item>Brandy</item>
		<item>Lemon vodka</item>
		<item>Blended whiskey</item>
		<item>Dry Vermouth</item>
		<item>Amaretto</item>
		<item>Tea</item>
		<item>Champagne</item>
		<item>Coffee liqueur</item>
		<item>Bourbon</item>
		<item>Tequila</item>
		<item>Vodka</item>
		<item>Añejo rum</item>
		<item>Bitters</item>
		<item>Sugar</item>
		<item>Kahlua</item>
		<item>demerara Sugar</item>
		<item>Dubonnet Rouge</item>
		<item>Lime juice</item>
		<item>Irish whiskey</item>
		<item>Apple brandy</item>
		<item>Carbonated water</item>
		<item>Cherry brandy</item>
		<item>Creme de Cacao</item>
		<item>Grenadine</item>
		<item>Port</item>
		<item>Coffee brandy</item>
		<item>Red wine</item>
		<item>Rum</item>
		<item>Grapefruit juice</item>
		<item>Ricard</item>
		<item>Sherry</item>
		<item>Cognac</item>
		<item>Sloe gin</item>
		<item>Apple juice</item>
		<item>Pineapple juice</item>
		<item>Lemon juice</item>
		<item>Sugar syrup</item>
		<item>Milk</item>
		<item>Strawberries</item>
		<item>Chocolate syrup</item>
		<item>Yoghurt</item>
		<item>Mango</item>
		<item>Ginger</item>
		<item>Lime</item>
		<item>Cantaloupe</item>
		<item>Berries</item>
		<item>Grapes</item>
		<item>Kiwi</item>
		<item>Tomato juice</item>
		<item>Cocoa powder</item>
		<item>Chocolate</item>
		<item>Heavy cream</item>
		<item>Galliano</item>
		<item>Peach Vodka</item>
		<item>Ouzo</item>
		<item>Coffee</item>
		<item>Spiced rum</item>
		<item>Water</item>
		<item>Espresso</item>
		<item>Angelica root</item>
		<item>Orange</item>
		<item>Cranberries</item>
		<item>Johnnie Walker</item>
		<item>Apple cider</item>
		<item>Everclear</item>
		<item>Cranberry juice</item>
		<item>Egg yolk</item>
		<item>Egg</item>
		<item>Grape juic</item>
		<item>Peach nectar</item>
		<item>Lemon</item>
		<item>Firewater</item>
		<item>Lemonade</item>
		<item>Lager</item>
		<item>Whiskey</item>
		<item>Absolut Citron</item>
		<item>Pisco</item>
		<item>Irish cream</item>
		<item>Ale</item>
		<item>Chocolate liqueur</item>
		<item>Chocolate liqueur</item>
		<item>Sambuca</item>
		<item>Cider</item>
		<item>Sprite</item>
		<item>7-Up</item>
		<item>Blackberry brandy</item>
		<item>Peppermint schnapps</item>
		<item>Creme de Cassis</item>
		<item>Jack Daniels</item>
		<item>Bailey\'s irish cream</item>
		<item>151 proof rum</item>
		<item>Absolut Vodka</item>
		<item>Goldschlager</item>
		<item>Crown Royal</item>
		<item>Cointreau</item>
		<item>Vermouth</item>
		<item>Advocaat</item>
		<item>Absolut Kurant</item>
		<item>Beer</item>
		<item>Kool-Aid</item>
		<item>Cherry Heering</item>
		<item>White Creme de Menthe</item>
		<item>Malibu rum</item>
		<item>Vanilla vodka</item>
		<item>Jägermeister</item>
		<item>Kiwi liqueur</item>
		<item>Grand Marnier</item>
		<item>Cachaca</item>
		<item>Peachtree schnapps</item>
		<item>Wild Turkey</item>
		<item>Cranberry vodka</item>
		<item>Corona</item>
		<item>Orange juice</item>
		<item>Yukon Jack</item>
		<item>Chocolate ice-cream</item>
		<item>Coconut rum</item>
		<item>Banana liqueur</item>
		<item>Black Sambuca</item>
		<item>Hot Damn</item>
		<item>Mint</item>
		<item>Campari</item>
		<item>Ice</item>
		<item>Sour mix</item>
		<item>Absinthe</item>
		<item>Whisky</item>
		<item>Guinness stout</item>
		<item>Vanilla ice-cream</item>
		<item>Chambord raspberry liqueur</item>
		<item>Jim Beam</item>
		<item>Godiva liqueur</item>
		<item>Fruit punch</item>
		<item>Baileys irish cream</item>
		<item>Zima</item>
		<item>Blue Curacao</item>
		<item>Coca-Cola</item>
		<item>Maui</item>
		<item>Frangelico</item>
		<item>Bacardi Limon</item>
		<item>Raspberry vodka</item>
		<item>Green Creme de Menthe</item>
		<item>Lemon peel</item>
		<item>Prosecco</item>
		<item>White Rum</item>
	</string-array>
</resources>