<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Dmitriy Ponomarenko
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group
			android:id="@+id/nav_view_primary"
			android:checkableBehavior="single">
		<item
				android:id="@+id/nav_cocktails"
				android:icon="@drawable/round_local_bar"
				android:title="@string/nav_cocktails"/>
		<item
				android:id="@+id/nav_favorites"
				android:icon="@drawable/round_heart_grey"
				android:title="@string/nav_favorites"/>
		<item
				android:id="@+id/nav_random"
				android:icon="@drawable/dice_6"
				android:title="@string/nav_random"/>
		<item
				android:id="@+id/nav_history"
				android:icon="@drawable/round_history"
				android:title="@string/nav_history"/>
	</group>

	<group android:id="@+id/nav_view_ternary"
			 android:checkableBehavior="single">
		<item
				android:id="@+id/nav_about"
				android:icon="@drawable/round_info"
				android:title="@string/nav_about"/>
	</group>
</menu>
