<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/filters_panel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:padding="@dimen/padding_standard"
		android:elevation="@dimen/under_toolbar_elevation"
		android:visibility="gone"
		android:orientation="vertical"
		tools:visibility="visible">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/padding_standard"
			android:orientation="horizontal">
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_small"
				android:text="@string/category"
				/>

		<Spinner
				android:id="@+id/filter_categories"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/padding_standard"
			android:orientation="horizontal">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_small"
				android:text="@string/ingredient"
				/>

		<Spinner
				android:id="@+id/filter_ingredients"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/padding_standard"
			android:orientation="horizontal">
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_small"
				android:text="@string/glass"
				/>

		<Spinner
				android:id="@+id/filter_glass"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/padding_standard"
			android:orientation="horizontal">
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_small"
				android:text="@string/alcoholic"
				/>

		<Spinner
				android:id="@+id/filter_alcoholic"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:orientation="horizontal">
		<Button
				style="?android:attr/buttonBarButtonStyle"
				android:id="@+id/btn_ok"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btn_cancel"/>
		<Button
				style="?android:attr/buttonBarButtonStyle"
				android:id="@+id/btn_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btn_ok"/>
	</LinearLayout>

</LinearLayout>
