<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Dmitriy Ponomarenko
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="match_parent"
				  android:layout_height="@dimen/nav_header_height"
				  xmlns:tools="http://schemas.android.com/tools"
				  xmlns:app="http://schemas.android.com/apk/res-auto"
				  android:background="@drawable/default_cover"
				  android:gravity="bottom"
				  android:orientation="vertical"
				  android:padding="@dimen/padding_standard"
				  android:theme="@style/ThemeOverlay.AppCompat.Dark">

	<ImageView
			android:id="@+id/user_icon"
			android:layout_width="@dimen/navdrawer_profile_image_size"
			android:layout_height="@dimen/navdrawer_profile_image_size"
			android:layout_marginBottom="@dimen/padding_standard"
			android:contentDescription="@string/content_description_user_face"
			android:transitionName="@string/transition_user_face"
			tools:ignore="UnusedAttribute"/>
	<!--app:srcCompat="@drawable/account"-->

	<TextView
			android:id="@+id/user_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_size_large"
			android:transitionName="@string/transition_user_name"
			android:textColor="@color/text_primary_light"
			android:textStyle="bold"
			tools:ignore="UnusedAttribute"/>

</LinearLayout>