<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 Dmitriy Ponomarenko
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">

	<ImageView
			android:id="@+id/details_image"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:scaleType="center"
			tools:src="@drawable/default_cover"
			android:contentDescription="@string/content_description_cocktail_image"
			app:layout_constraintDimensionRatio="H,16:10"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			/>

	<TextView
			style="@style/TextView.Label"
			android:id="@+id/details_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			tools:text="@string/app_name"
			android:textSize="@dimen/text_size_xlarge"
			android:paddingTop="@dimen/padding_double"
			app:layout_constraintTop_toBottomOf="@+id/details_image"
			android:paddingLeft="@dimen/padding_double"
			android:paddingStart="@dimen/padding_double"
			android:paddingEnd="@dimen/padding_double"
			android:paddingRight="@dimen/padding_double"
			android:paddingBottom="@dimen/padding_small"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			/>

	<TextView
			style="@style/TextView.Subheader"
			android:id="@+id/details_description"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			tools:text="@string/app_name"
			android:textSize="@dimen/text_size_xmedium"
			android:paddingTop="@dimen/padding_small"
			android:paddingLeft="@dimen/padding_double"
			android:paddingStart="@dimen/padding_double"
			android:paddingEnd="@dimen/padding_double"
			android:paddingRight="@dimen/padding_double"
			android:paddingBottom="@dimen/padding_double"
			app:layout_constraintTop_toBottomOf="@+id/details_name"
			app:layout_constraintBottom_toTopOf="@+id/ingredients_label"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			/>

	<TextView
			android:id="@+id/details_error"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/msg_error_on_query"
			android:textSize="@dimen/text_size_xmedium"
			android:textStyle="bold"
			android:padding="@dimen/padding_huge"
			android:visibility="gone"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/details_name"
			/>

	<ProgressBar
			android:id="@+id/progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/padding_double"
			app:layout_constraintTop_toTopOf="parent"
			android:visibility="gone"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/details_name"
			/>

	<TextView
			style="@style/TextView.Label"
			android:id="@+id/ingredients_label"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_size_large"
			android:textStyle="bold"
			android:paddingLeft="@dimen/padding_double"
			android:paddingStart="@dimen/padding_double"
			android:paddingEnd="@dimen/padding_double"
			android:paddingRight="@dimen/padding_double"
			android:paddingBottom="@dimen/padding_small"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/details_description"
			app:layout_constraintBottom_toTopOf="@+id/recycler_view"
			android:text="@string/ingredients"
			/>

	<android.support.v7.widget.RecyclerView
			android:id="@+id/recycler_view"
			android:layout_width="0dp"
			android:layout_height="200dp"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
			app:layout_constraintTop_toBottomOf="@+id/ingredients_label"
			/>

</android.support.constraint.ConstraintLayout>
